# RetSim

./: .gitignore  LICENSE  README.md  index.html
_framework/: Microsoft.AspNetCore.Components.Forms.dll.br  Microsoft.AspNetCore.Components.Web.dll.br  Microsoft.AspNetCore.Components.WebAssembly.dll.br  Microsoft.AspNetCore.Components.dll.br  Microsoft.Extensions.Configuration.Abstractions.dll.br  Microsoft.Extensions.Configuration.Json.dll.br  Microsoft.Extensions.Configuration.dll.br  Microsoft.Extensions.DependencyInjection.Abstractions.dll.br  Microsoft.Extensions.DependencyInjection.dll.br  Microsoft.Extensions.Logging.Abstractions.dll.br  Microsoft.Extensions.Logging.dll.br  Microsoft.Extensions.Options.dll.br  Microsoft.JSInterop.dll.br  MudBlazor.dll.br  RetSim.dll.br  RetSimWeb.dll.br  System.Collections.Specialized.dll.br  System.Collections.dll.br  System.ComponentModel.Annotations.dll.br  System.ComponentModel.TypeConverter.dll.br  System.Console.dll.br  System.Data.Common.dll.br  System.Linq.Expressions.dll.br  System.Linq.Queryable.dll.br  System.Linq.dll.br  System.Net.Http.Json.dll.br  System.Net.Http.dll.br  System.ObjectModel.dll.br  System.Private.CoreLib.dll.br  System.Private.Uri.dll.br  (+17 more)
cpp/: .gitignore  CMakeLists.txt  Enemy.h  FightSimulation.cpp  FightSimulation.h  Player.cpp  Player.h  Spells.cpp  Spells.h  Timer.cpp  Timer.h  main.cpp
cpp/Events/: AuraEvent.cpp  AuraEvent.h  CastEvent.cpp  CastEvent.h  CooldownEvent.cpp  CooldownEvent.h  Event.cpp  Event.h
cpp/Tactics/: PerfectTactic.cpp  PerfectTactic.h  Tactic.cpp  Tactic.h
(+375 files in other folders)
